--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 	<video muted id="webcam" class="visible"></video>
 
-	<div id="background">
-	</div>
+	<div id="background"></div>
 
 	<canvas id="faceCanvas" tabindex="1"></canvas>
 
